--- a/genindex.html
+++ b/genindex.html
@@ -263,10 +263,12 @@
         <li><a href="developer/cmake_test/set_print_length.html#module-cmake_test-set_print_length">module</a>
 </li>
       </ul></li>
-      <li><a href="developer/cmake_test/add_dir.html#cmake_test-add_dir.ct_add_dir">ct_add_dir() (in module cmake_test/add_dir)</a>
+      <li><a href="developer/cmake_test/colors.html#cmake_test-colors.CMAKETEST_USE_COLORS">CMAKETEST_USE_COLORS (in module cmake_test/colors)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="developer/cmake_test/add_dir.html#cmake_test-add_dir.ct_add_dir">ct_add_dir() (in module cmake_test/add_dir)</a>
+</li>
       <li><a href="developer/cmake_test/add_section.html#cmake_test-add_section.ct_add_section">ct_add_section() (in module cmake_test/add_section)</a>
 </li>
       <li><a href="developer/cmake_test/add_test.html#cmake_test-add_test.ct_add_test">ct_add_test() (in module cmake_test/add_test)</a>
