--- a/genindex.html
+++ b/genindex.html
@@ -89,6 +89,7 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -438,6 +439,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="developer/cmake_test/execution_unit.html#cmake_test-execution_unit.CTExecutionUnit.has_printed">has_printed (cmake_test/execution_unit.CTExecutionUnit attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="developer/cmake_test/execution_unit.html#cmake_test-execution_unit.CTExecutionUnit.is_in_expect_fail_tgt">is_in_expect_fail_tgt() (cmake_test/execution_unit.CTExecutionUnit method)</a>
 </li>
   </ul></td>
 </tr></table>
