deploy: d5ae33d63b98a2ade759c9012c1a8f3c7105a9ad

--- a/genindex.html
+++ b/genindex.html
@@ -1,22 +1,20 @@
+
+
 <!DOCTYPE html>
 <html class="writer-html5" lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; CMakeTest 1.0.0alpha documentation</title>
-      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
-      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=19f00094" />
+      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=03e43079" />
+      <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
   
-  <!--[if lt IE 9]>
-    <script src="_static/js/html5shiv.min.js"></script>
-  <![endif]-->
-  
-        <script src="_static/jquery.js?v=5d32c60e"></script>
-        <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=418f8411"></script>
-        <script src="_static/doctools.js?v=888ff710"></script>
-        <script src="_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="_static/jquery.js?v=5d32c60e"></script>
+      <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
+      <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=418f8411"></script>
+      <script src="_static/doctools.js?v=888ff710"></script>
+      <script src="_static/sphinx_highlight.js?v=4825356b"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="#" />
@@ -34,9 +32,6 @@
           <a href="index.html" class="icon icon-home">
             CMakeTest
           </a>
-              <div class="version">
-                1.0.0
-              </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
     <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
@@ -199,6 +194,13 @@
 </li>
       </ul></li>
       <li>
+    cmake_test/asserts/regex_equal
+
+      <ul>
+        <li><a href="developer/cmake_test/asserts/regex_equal.html#module-cmake_test-asserts-regex_equal">module</a>
+</li>
+      </ul></li>
+      <li>
     cmake_test/asserts/string
 
       <ul>
@@ -323,6 +325,10 @@
       <li><a href="developer/cmake_test/asserts/string.html#cmake_test-asserts-string.ct_assert_not_string">ct_assert_not_string() (in module cmake_test/asserts/string)</a>
 </li>
       <li><a href="developer/cmake_test/asserts/prints.html#cmake_test-asserts-prints.ct_assert_prints">ct_assert_prints() (in module cmake_test/asserts/prints)</a>
+</li>
+      <li><a href="developer/cmake_test/asserts/regex_equal.html#cmake_test-asserts-regex_equal.ct_assert_regex_equal">ct_assert_regex_equal() (in module cmake_test/asserts/regex_equal)</a>
+</li>
+      <li><a href="developer/cmake_test/asserts/regex_equal.html#cmake_test-asserts-regex_equal.ct_assert_regex_not_equal">ct_assert_regex_not_equal() (in module cmake_test/asserts/regex_equal)</a>
 </li>
       <li><a href="developer/cmake_test/asserts/string.html#cmake_test-asserts-string.ct_assert_string">ct_assert_string() (in module cmake_test/asserts/string)</a>
 </li>
@@ -481,6 +487,8 @@
         <li><a href="developer/cmake_test/asserts/list.html#module-cmake_test-asserts-list">cmake_test/asserts/list</a>
 </li>
         <li><a href="developer/cmake_test/asserts/prints.html#module-cmake_test-asserts-prints">cmake_test/asserts/prints</a>
+</li>
+        <li><a href="developer/cmake_test/asserts/regex_equal.html#module-cmake_test-asserts-regex_equal">cmake_test/asserts/regex_equal</a>
 </li>
         <li><a href="developer/cmake_test/asserts/string.html#module-cmake_test-asserts-string">cmake_test/asserts/string</a>
 </li>
